[package]
name = "rocket-session-store"
version = "0.1.0"
authors = ["Aurora Zuoris <programming.aurora@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["rocket", "session", "cookies", "authentication"]

[dependencies]
rocket =  "0.5.0-rc.1"
redis = { version = "0.21.5", optional = true }
serde = "1.0.134"
serde_json = "1.0.76"
rand = "0.8.4"
thiserror = "1.0.30"
