[package]
name = "rocket-session-store"
version = "0.2.1"
authors = ["Aurora Zuoris <programming.aurora@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/Aurora2500/rocket-session-store"
repository = "https://github.com/Aurora2500/rocket-session-store"
readme = "README.md"
description = "A rust session library that can use a custom store."
keywords = ["rocket", "session", "cookies", "authentication"]
categories = ["asynchronous", "authentication", "database", "web-programming::http-server"]

[dependencies]
rocket =  "0.5.0"
redis = { version = "0.21.5", optional = true }
serde = "1.0.134"
serde_json = "1.0.76"
rand = "0.8.4"
thiserror = "1.0.30"
